--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='../public/stylesheets/style.css'/>
   </head>
   <body>
+    <img src="/public/images/apple.png" alt="">
     {{{body}}}
   </body>
 </html>
