--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <section id="product">
     <div class="product-container">
-        <a href="/{{name}}">
+        <a href="/{{brand}}">
             <img src="../public/images/{{image}}" alt="image">
         </a>
         <h3 class="product-name">{{name}}</h3>
