--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,2 @@
-<section id="product">
-    <div class="product-container">
-        <a href="/{{brand}}">
-            <img src="../public/images/{{image}}" alt="image">
-        </a>
-        <h3 class="product-name">{{name}}</h3>
-        <h5>{{description}}</h5>
-        <p>{{features}}</p>
-    </div>
-
-</section>
+<h1>{{title}}</h1>
+<p>Welcome to {{title}}</p>
