--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,8 @@
 body {
   padding: 50px;
-  font: 14px Arial, sans-serif;
-  background-color: black;
-  color: white;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
-
