--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <img src="/images/apple.png" alt="apple logo" width="100px" id="appleLogo">
     {{{body}}}
   </body>
 </html>
