--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,14 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<section id="pods">
+    <div class="product-container">
+        
+        <h1>Introducing the newest product from {{brand}}</h1>
+        
+        <a href="/{{name}}">
+            <img src="/images/{{image}}" alt="airpods">
+        </a>
+
+        <p>{{description}}</p>
+
+        <h3 class="product-name">{{name}}</h3>
+    </div>
+</section>
