--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>{{name}}</title>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
   </head>
   <body>
     <img src="/images/apple.png" alt="apple logo" width="100px" id="appleLogo">
