--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,4 @@
-<section id="pods">
-    <div class="product-container">
-        
-        <h1>Introducing the newest product from {{brand}}</h1>
-        
-        <a href="/{{name}}">
-            <img src="/images/{{image}}" alt="airpods">
-        </a>
-
-        <p>{{description}}</p>
-
-        <h3 class="product-name">{{name}}</h3>
-    </div>
-</section>
+<h1>{{title}}</h1>
+<p>Welcome to {{title}}</p>
+<a href="/user1">User 1</a>
+<a href="/user2">User 2</a>
