yay somethings working

--- a/views/userpage.hbs
+++ b/views/userpage.hbs
@@ -1,7 +1,9 @@
-<h1>{{name}}</h1>
-<h4>{{role}}</h4>
+<h1>{{brand}}</h1>
+<h4>{{name}}</h4>
 
 <!-- optional image here -->
-<img src="/images/{{bioPic}}" alt="user image"> 
+<img src="/images/{{bioPic}}" alt="product image"> 
 {{!-- remember when you are working with exprss and nodes, images and videos need to have these img src thing still --}}
-<p>{{bio}}</p>
+<p>{{description}}</p>
+
+<p>{{features}}</p>
