--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,3 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<a href="/user1">User 1</a>
-<a href="/user2">User 2</a>
+<p>Welcome to the launch of {{title}}'s newest product!</p>
+<a href="/user1">Product</a>
