testing out formats

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,14 @@
 <h1>{{title}}</h1>
 <p>Welcome to the launch of {{title}}'s newest product!</p>
-<a href="/user1">Product</a>
+{{!-- <a href="/user1">Product</a> --}}
+
+
+<h1>{{brand}}</h1>
+<h4>{{name}}</h4>
+
+<!-- optional image here -->
+<img src="/images/{{bioPic}}" alt="product image"> 
+{{!-- remember when you are working with exprss and nodes, images and videos need to have these img src thing still --}}
+<p>{{description}}</p>
+
+<p>{{features}}</p>
