--- a/views/userpage.hbs
+++ b/views/userpage.hbs
@@ -1,4 +1,4 @@
-<h1>{{brand}}</h1>
+{{!-- <h1>{{brand}}</h1>
 <h4>{{name}}</h4>
 
 <!-- optional image here -->
@@ -6,4 +6,4 @@
 {{!-- remember when you are working with exprss and nodes, images and videos need to have these img src thing still --}}
 <p>{{description}}</p>
 
-<p>{{features}}</p>
+<p>{{features}}</p> --}}
