--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <p>Welcome to the launch of {{title}}'s newest product!</p>
-<a href="/user1">Product
+<a href="/user1">Product</a>
 
 
 <h1>{{brand}}</h1>
@@ -12,4 +12,3 @@
 <p>{{description}}</p>
 
 <p>{{features}}</p>
-</a>
