--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,13 @@
-<h1>{{title}}</h1>
-<p>Welcome to the launch of {{title}}'s newest product!</p>
+<h1>{{brand}}</h1>
+
+<h1>Welcome to the launch of {{brand}}'s newest product!</h1>
 <a href="/user1">Product</a>
 
 
-<h1>{{brand}}</h1>
+
 <h4>{{name}}</h4>
+<img src="/images/{{bioPic}}" alt="product image" id="productIMG"> 
 
-<!-- optional image here -->
-<img src="/images/{{bioPic}}" alt="product image"> 
-{{!-- remember when you are working with exprss and nodes, images and videos need to have these img src thing still --}}
-<p>{{description}}</p>
+<p id="desc">{{description}}</p>
 
-<p>{{features}}</p>
+<p id="features">{{features}}</p>
