--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,8 @@
 <h1>{{brand}}</h1>
 
+<a href="/user1">Click here to enter!</a>
+
 <h1>Welcome to the launch of {{brand}}'s newest product!</h1>
-<a href="/user1">Product</a>
-
-
 
 <h4>{{name}}</h4>
 <img src="/images/{{bioPic}}" alt="product image" id="productIMG"> 
