--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,11 +2,12 @@
 
 <a href="/user1">Click here to enter!</a>
 
-<h1>Welcome to the launch of {{brand}}'s newest product!</h1>
 
-<h4>{{name}}</h4>
+<h2>Introducing the {{name}}</h2>
 <img src="/images/{{bioPic}}" alt="product image" id="productIMG"> 
 
+<h3>Description</h3>
 <p id="desc">{{description}}</p>
 
+<h3>Features</h3>
 <p id="features">{{features}}</p>
