--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,10 @@
 <h2>Introducing the {{name}}</h2>
 <img src="/images/{{bioPic}}" alt="product image" id="productIMG"> 
 
+<div id="info">
 <h3>Description</h3>
 <p id="desc">{{description}}</p>
 
 <h3>Features</h3>
 <p id="features">{{features}}</p>
+</div>
