--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,7 +11,7 @@ a {
 
 @media screen and (max-width: 480px) {
   #appleLogo {
-    margin-left: 20%;
+    margin-left: 30%;
   }
   
   #productIMG {
