--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   background-color: white;
-  color: black;
+  color: darkgray;
   font-family: Arial, Helvetica, sans-serif;
 }
 
