--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{brand}}</h1>
 
-<a href="/user1">Click here to enter!</a>
+<a href="/user1">
 
 
 <h2>Introducing the {{name}}</h2>
@@ -13,3 +13,5 @@
 <h3>Features</h3>
 <p id="features">{{features}}</p>
 </div>
+
+</a>
