--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{brand}}</h1>
 
-<a href="/user1">
+<a href="/user1"></a>
 
 
 <h2>Introducing the {{name}}</h2>
@@ -14,4 +14,3 @@
 <p id="features">{{features}}</p>
 </div>
 
-</a>
