--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 
 
 <h2>Introducing the {{name}}</h2>
-<img src="/images/{{bioPic}}" alt="product image" id="productIMG"> 
+<img src="/images/{{productPic}}" alt="product image" id="productIMG"> 
 
 <div id="info">
 <h3>Description</h3>
@@ -13,4 +13,6 @@
 <h3>Features</h3>
 <p id="features">{{features}}</p>
 </div>
+
+<video src="/images/{{videoLink}}"></video>
 
