adding video controls

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,5 +14,5 @@
 <p id="features">{{features}}</p>
 </div>
 
-<video src="/images/{{videoLink}}"></video>
+<video src="/images/{{videoLink}}" controls></video>
 
